# cinema_management

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  mypy.ini  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.dev.yaml
cinema/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: import_tmdb_movies.py
core/migrations/: 0001_initial.py
core/tests/: test_core_views.py  test_models.py  test_tmdb_client.py
core/tmdb_integration/: exceptions.py  tmdb_client.py
tests/: test_sanity.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_auth.py
